--- a/daisy.html
+++ b/daisy.html
@@ -132,6 +132,8 @@ It has been developed with the help of a great many people including (but not li
 				}
 			}
 
+			ringSwirl.rotation.z += .0004;
+
 			//Update VR headset position and apply to camera.
 			controls.update();
 
